Fixed overscrolling white bars on mobile

--- a/style.css
+++ b/style.css
@@ -5,10 +5,6 @@ body {
     padding-bottom: 60px;
 }
 
-html {
-    background-color: rgb(20, 20, 20);
-}
-
 .content {
 }
 
